# verso

./: .gitignore  Cargo.toml  README.md
verso-app/: Cargo.toml  Dioxus.toml
verso-app/assets/: style.css
verso-app/src/: main.rs  state.rs
verso-app/src/components/: details_panel.rs  finding_card.rs  mod.rs  severity_badge.rs  summary_bar.rs
verso-app/src/screens/: error.rs  input.rs  loading.rs  mod.rs  report.rs
verso-cli/: Cargo.toml
verso-cli/src/: main.rs
verso-core/: Cargo.toml
verso-core/src/: config.rs  error.rs  graph.rs  lib.rs  report.rs  scanner.rs  storage.rs
verso-core/src/backend/: bitcoind.rs  esplora.rs  mod.rs
verso-core/src/detectors/: address_reuse.rs  behavioral.rs  change_detection.rs  cioh.rs  cluster_merge.rs  consolidation.rs  dust.rs  dust_spending.rs  exchange_origin.rs  mod.rs  script_mixing.rs  tainted.rs  utxo_age.rs
verso-tests/: Cargo.toml
verso-tests/src/: lib.rs  regtest_harness.rs  scenarios.rs
verso-tests/tests/: clean_wallet.rs  cli_smoke.rs  detector_01.rs  detector_02.rs  detector_03.rs  detector_04.rs  detector_05.rs  detector_06.rs  detector_07.rs  detector_08.rs  detector_09.rs  detector_10.rs  detector_11.rs  detector_12.rs  full_parity.rs  harness_smoke.rs
