[package]
name = "verso-core"
version = "0.1.0"
edition = "2021"

[dependencies]
bdk_wallet = "2"
bdk_chain = "0.23"
bdk_bitcoind_rpc = "0.22"
bdk_esplora = { version = "0.22", features = ["async-https"] }
esplora-client = { version = "0.12", features = ["async", "async-https", "tokio"] }
bdk_sqlite = "0.5"
bitcoin = "0.32"
miniscript = "12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
bitcoincore-rpc = "0.19"
async-trait = "0.1"
log = "0.4"
